# crm_tg_AI

./: .gitignore  BUSINESS_ACCOUNTS_SETUP.md  CONTACTS_FIX.md  CONTACTS_SYSTEM.md  QUICK_START_OPENROUTER.md  check_settings.py  test_api_key.py  test_auth.py  test_chat_formatting.py  test_chat_summary.py  test_json_parsing.py  test_suggestions_parsing.py  test_summary_api.py  test_summary_service.py
backend/: .env.example  OPENROUTER_INTEGRATION.md  README.md  alembic.ini  analyze_chat_duplicates.py  auto_setup_telegram_user_id.py  check_multiple_accounts.py  check_tables.py  debug_audio_models.py  debug_business_accounts.py  examine_db.py  final_api_test.py  final_chat_test.py  final_message_test.py  pyproject.toml  requirements.txt  setup_telegram_user_id.py  start.sh  test_all_business_accounts.py  test_api_business_accounts.py  test_api_final.py  test_api_final_fixed.py  test_business_accounts_fix.py  test_chat_filtering.py  test_chat_merge.py  test_fixed_logic.py  test_message_filtering.py  test_repository.py  test_virtual_account.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  business_account.py  contact.py  settings.py  user.py
backend/app/schemas/: auth_schema.py  business_account_schema.py  contact_schema.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: cleanup_duplicates.py  create_test_user.py
backend/tests/: test_auth.py  test_health.py
(+56 files in other folders)
